# gogo

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yaml  litellm_config.yaml
agent-demo/: README.md  pyproject.toml
agent-demo/src/agent_demo/: __init__.py  main.py
cli/: go.mod  main.go  test.sh
deploy/: docker-compose.yaml  litellm_config.yaml
docs/: ARCHITECTURE_MVP.md  ARCHITECTURE_MVP_IMPROVEMENTS.md  INGRESS_IMPLEMENTATION.md  INGRESS_PLAN.md  TARGET.md  TOOL_IMPLEMENTATION.md  TOOL_IMPLEMENTATION_GAP.md  refactor_transport.md
docs/api/: GATEWAY.md  Orchestrator.md
infra/gateway/: config.example.yaml  package-lock.json  package.json  vitest.config.ts
infra/gateway/src/: config.ts  gateway.ts  index.ts  (+2 more)
ingress/: Dockerfile  README.md  go.mod  go.sum  main.go
orchestrator/: Dockerfile  README.md  go.mod  go.sum  main.go
orchestrator/agentclient/: client.go  client_test.go
orchestrator/api/: agents.go  agents_test.go  approvals.go  approvals_test.go  events.go  handler.go  invoke.go  messages.go  messages_test.go  pkg.go  pkg_test.go  tools.go  tools_test.go
orchestrator/config/: config.go
orchestrator/domain/: enums.go  models.go  payload.go  request.go  run.go  session.go  tool.go
orchestrator/llmproxy/: client.go  client_test.go  handler.go  handler_test.go
orchestrator/policies/: tool_policy.rego
orchestrator/policy/: engine.go
orchestrator/store/: sqlite.go  sqlite_test.go  store.go
sdk/agent/python/: README.md  pyproject.toml
sdk/agent/python/src/agent_sdk/: __init__.py  agent.py  client.py  models.py  sse.py
(+79 files in other folders)
