[project]
name = "agent-demo"
version = "0.1.0"
description = "Demo agent for the multi-agent platform (M0)"
requires-python = ">=3.10"
dependencies = [
    "agent-sdk",
]

[tool.uv.sources]
agent-sdk = { path = "../sdk/agent/python", editable = true }

[project.scripts]
agent-demo = "agent_demo.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_demo"]
